ci: travis-ci config update
configures travis-ci config for nodejs

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,25 @@
-sudo: false
+# travis-ci 
+os: linux
+dist: xenial
+
 language: node_js
 node_js:
-- '8'
+- '10'
+- '12'
+
 branches:
   only:
   - master
-cache:
-  directories:
-  - node_modules
+  
+git:
+  quiet: true
+
+cache: npm
+
 before_install:
 - npm update
 - cd web
+
 install:
 - npm install
 script:
