--- a/web/package.json
+++ b/web/package.json
@@ -6,40 +6,31 @@
   "scripts": {
     "start": "concurrently 'react-scripts start' 'netlify-lambda serve src/functions'",
     "build": "react-scripts build && netlify-lambda build src/functions",
-    "test": "react-scripts test --coverage --verbose --detectOpenHandles --forceExit"
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "dependencies": {
-    "@sendgrid/mail": "^7.2.5",
+    "@sendgrid/mail": "^7.2.4",
     "bootstrap": "^4.5.2",
-    "chart.js": "^2.9.3",
     "dotenv": "^8.2.0",
     "encoding": "^0.1.13",
     "http-proxy-middleware": "^1.0.5",
-    "moment": "^2.28.0",
-    "mongodb": "^3.6.2",
-    "mongodb-client-encryption": "^1.1.0",
-    "node-fetch": "^2.6.1",
+    "node-fetch": "^2.6.0",
     "react": "^16.13.1",
-    "react-chartjs-2": "^2.10.0",
-    "react-dom": "^16.13.1",
-    "react-router-dom": "^5.2.0",
-    "saslprep": "^1.0.3"
+    "react-dom": "^16.13.1"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.10.4",
     "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.0.2",
-    "@testing-library/user-event": "^12.1.4",
-    "@types/aws-lambda": "^8.10.62",
-    "@types/chart.js": "^2.9.24",
+    "@testing-library/react": "^10.4.9",
+    "@testing-library/user-event": "^12.1.3",
+    "@types/aws-lambda": "^8.10.61",
     "@types/dotenv": "^8.2.0",
-    "@types/jest": "^26.0.13",
-    "@types/mongodb": "^3.5.27",
-    "@types/node": "^14.10.1",
+    "@types/jest": "^26.0.12",
+    "@types/node": "^14.6.2",
     "@types/node-fetch": "^2.5.7",
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
-    "@types/react-router-dom": "^5.1.5",
     "concurrently": "^5.3.0",
     "netlify-lambda": "^2.0.1",
     "react-scripts": "3.4.3",
